# simplefempp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
simplefem/: lagrange.cpp  lagrange.h  polynomials.h
test/test_degree1/: main.cpp
test/test_evaluate/: CMakeLists.txt  main.cpp
